[package]
name = "pylon"
version = "0.0.0"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-files = "0.6"
ctrlc = { version = "3.2", features = ["termination"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
